# concol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  travis.yml
include/: concol.h
src/: concol.cpp
test/: CMakeLists.txt
test/src/: test_concol.cpp
